2012-04-12 16:05  paddockd

	* [r322] makefile.windows-display, sources,
	  sources/portaudio-r1826.tar.gz, src/squeezeslave/squeezeslave.c:
	  Updated to Windows June 2010 DirectX SDK.
	  Enabled ZONES feature for mingw32 builds.
	  Updated portaudio library to r1826 for mingw32 builds.
	  Increased revision to 322.

2012-04-08 14:21  paddockd

	* [r321] ChangeLog, makefile.osx-i64-display,
	  makefile.osx-intel-display, makefile.osx-ppc-display,
	  src/squeezeslave/squeezeslave.c: Enable ZONES for OSX.
	  Remove -Werror from portaudio configure prior to execution.
	  Increased revision to 321.

2012-04-02 13:39  paddockd

	* [r320] ChangeLog, TODO, src/slimproto/slimproto.c,
	  src/squeezeslave/squeezeslave.c, src/squeezeslave/squeezeslave.h:
	  Updated slimproto_helo to use 36 byte message.
	  Increased firmware revision to 8.
	  Increased revision to 320.

2012-03-07 12:56  paddockd

	* [r319] ChangeLog, src/slimaudio/slimaudio_decoder_aac.c,
	  src/squeezeslave/squeezeslave.c: Removed depreciated function
	  calls from ffmpeg aac decoder. Thanks to Tim Harder for the
	  patch.
	  Increased revision to 319.

2012-02-27 13:23  paddockd

	* [r318] ChangeLog,
	  contrib/makefile.linux26-armel-nofpu-alsa-display,
	  contrib/makefile.linux26-armel-nofpu-oss-display,
	  makefile.linux26-armel-alsa-display,
	  makefile.linux26-armel-display, scripts/buildall-lnx26-armel,
	  src/squeezeslave/squeezeslave.c: Moved squeezeplug armel
	  makefiles from contrib folder.
	  Updated armel build script.
	  Increased revision to 318.

2012-02-27 12:49  paddockd

	* [r317] ChangeLog,
	  contrib/makefile.linux26-armel-nofpu-alsa-display,
	  contrib/makefile.linux26-armel-nofpu-oss-display,
	  patches/tremor-r18153-version-script.patch,
	  sources/tremor-r18153.tar.bz2, src/squeezeslave/squeezeslave.c:
	  Added tremor fixed point vorbis library r18153 and build patch.
	  Updated tremor library in squeezeplug makefiles to r18153.